added shift tests

--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -211,6 +211,21 @@
 			this.assertEqual(3, element.childNodes.length);
 			this.assertEqual('one', element.childNodes[2].innerHTML);
 			this.assertEqual('one', ba[2]);
+		},
+
+		testShift: function () {
+			var result;
+
+			this.assertEqual(3, element.childNodes.length);
+			this.assertEqual(3, ba.length);
+			result = ba.shift();
+			this.assertEqual(2, element.childNodes.length);
+			this.assertEqual(2, ba.length);
+			this.assertEqual('one', result);
+			result = ba.shift();
+			this.assertEqual(1, element.childNodes.length);
+			this.assertEqual(1, ba.length);
+			this.assertEqual('two', result);
 		}
       
   }, {testLog: "methods"});
