added a test that uses two bound arrays. this would have caught the closure silliness.

--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -122,6 +122,13 @@
 			ba.push();
 			ba.reverse();
 			ba.shift();
+		},
+
+		testTwo: function () {
+			var ab = new BoundArray(['four', 'five', 'six'], null, null);
+
+			this.assertEqual('one', ba[0]);
+			this.assertEqual('four', ab[0]);
 		}
       
   }, {testLog: "array"});
