modified mutator methods test

--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -122,6 +122,9 @@
 			ba.push();
 			ba.reverse();
 			ba.shift();
+			ba.sort();
+			ba.splice();
+			ba.sort();
 		},
 
 		testTwo: function () {
