--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -311,11 +311,13 @@
 			this.assertEqual(4, result);
 			this.assertEqual(4, element.childNodes.length);
 			this.assertEqual(4, ba.length);
+			this.assertEqual('zero', element.childNodes[0].innerHTML);
 			this.assertEqual('zero', ba[0]);
 			result = ba.unshift('negative three', 'negative two', 'negative one');
 			this.assertEqual(7, result);
 			this.assertEqual(7, element.childNodes.length);
 			this.assertEqual(7, ba.length);
+			this.assertEqual('negative three', element.childNodes[0].innerHTML);
 			this.assertEqual('negative three', ba[0]);
 		}
       
