fixed splice test

--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -301,6 +301,7 @@
 			for (i=0; i<result.length; i++) {
 				this.assertEqual(expected[i], result[i]);
 			}
+			this.assertEqual('three', ba[3]);
 		},
 	
 		testUnshift: function () {
