added beginnings of jquery animation

--- a/test/examples/example_selectionsort.html
+++ b/test/examples/example_selectionsort.html
@@ -7,9 +7,10 @@
 	<title>example_selectionsort</title>
 	<!-- Date: 2008-11-07 -->
   <script src="../../src/boundarray.js" type="text/javascript"></script>
+	<script src="../../lib/jquery-1.2.6.js" type="text/javascript"></script>
 	<script src="selectionsort.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-	<ul id="names"></ul>
+	<ul id="names" style="list-style-type: none;"></ul>
 </body>
 </html>
