--- a/test/unit/boundarray_test.html
+++ b/test/unit/boundarray_test.html
@@ -363,7 +363,17 @@
 		},
 
 		testSpliceRemovesElement: function () {
-			// TODO
+			ba.splice(1, 2);
+			this.assertEqual(3, element.childNodes.length);
+			this.assertEqual('', element.childNodes[1].innerHTML);
+			this.assertEqual('', element.childNodes[2].innerHTML);
+			this.assertEqual(1, ba.length);
+			ba = new BoundArray(['one', 'two', 'three'], 'boundlist');
+			ba.splice(1, 2);
+			this.assertEqual(3, element.childNodes.length);
+			this.assertEqual('2', element.childNodes[1].innerHTML);
+			this.assertEqual('', element.childNodes[2].innerHTML);
+			this.assertEqual(1, ba.length);
 		}
       
   }, {testLog: "bugs"});
