added example with code snippets.

--- a/test/examples/selectionsort.html
+++ b/test/examples/selectionsort.html
@@ -4,13 +4,13 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>example_simple</title>
+	<title>selectionsort</title>
 	<!-- Date: 2008-11-07 -->
   <script src="../../src/boundarray.js" type="text/javascript"></script>
 	<script src="../../lib/jquery-1.2.6.js" type="text/javascript"></script>
-	<script src="simple.js" type="text/javascript" charset="utf-8"></script>
+	<script src="selectionsort.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-	<ul id="numbers" style="list-style-type: none;"></ul>
+	<ul id="names" style="list-style-type: none;"><li></li></ul>
 </body>
 </html>
