--- a/test/examples/bubblesort.html
+++ b/test/examples/bubblesort.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>example_bubblesort</title>
+	<title>bubblesort</title>
 	<!-- Date: 2008-11-07 -->
   <script src="../../src/boundarray.js" type="text/javascript"></script>
 	<script src="bubblesort.js" type="text/javascript" charset="utf-8"></script>
